# dysys

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
dysys/: __init__.py  controltf.py  statespacesymbolic.py  sysdyn.py  transferfunctions.py  transferfunctionsymbolic.py
examples/factor-transfer-function/: Makefile  solution.py
examples/state-space-forced-response/: figure-0.pgf  solution.py  solution_pub.tex
examples/symbolic-transfer-function/: main.py
sysdynutils/: __init__.py  statespacesymbolic.py  sysdyn.py
tests/: test_controltf.py  test_statespacesymbolic.py  test_sysdyn.py  test_transferfunctionsymbolic.py
