[tool.poetry]
name = "dysys"
version = "0.1.8"
description = "A package for working with system dynamics symbolically and numerically"
authors = ["Rico Picone <rpicone@stmartin.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
sympy = "^1.12"
control = "^0.9.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
engcom = "^0.1.20"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
urllib3 = "<=2.0"
sphinxcontrib-apidoc = "^0.5.0"
sphinx-autoapi = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
