[tool.poetry]
name = "dysys"
version = "0.1.11"
description = "A package for working with system dynamics symbolically and numerically"
authors = ["Rico Picone <rpicone@stmartin.edu>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.4.0"
sympy = "^1.12"
control = ">=0.10.2"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
engcom = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
urllib3 = "<=2.0"
sphinxcontrib-apidoc = "^0.5.0"
sphinx-autoapi = "^3.0.0"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
